--- a/fertilityawareness.html
+++ b/fertilityawareness.html
@@ -23,7 +23,7 @@
        <li><a href="methods.html">Contraceptive Methods</a></li>
        <li><a href="blog.html">Blog</a></li>
        <li><a href="oc.html">Ovulation Calendar</a></li>
-       
+       <li><a href="bot.html">Meet Convo!</a></li>
       
     </ul>
   </nav>
